Adjusted the column-gap property for the #skills ul selector, in the index.css file, in order to resolve an issue where margins for individual skills were running up against each other, and colliding with one another, when the browser's window was resized to change its width. Also, removed the row-gap property from this selector, since it was not making any difference.

--- a/css/index.css
+++ b/css/index.css
@@ -158,8 +158,7 @@ li.outerList div {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    row-gap: 1rem;
-    column-gap: 1rem;
+    column-gap: 2.7rem;
     justify-content: space-between;
 }
 #skills ul li {
